--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <p>
         Cápsula do tempo de <br />
-        <strong>Rodrigo Gonçalves</strong>
+        <strong>Daniel Kaizer</strong>
       </p>
 
       <span>Feito com 💜 no NLW da Rocketseat</span>
@@ -33,7 +33,7 @@
 
     <nav>
       <a
-        href="https://www.youtube.com/watch?v=3nz5HkUJaVU"
+        href="https://www.youtube.com/watch?v=xMHJGd3wwZk&ab_channel=Everythingistroll"
         target="_blank"
         class="memory"
       >
