--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <nav>
       <a
-        href="https://www.youtube.com/watch?v=xMHJGd3wwZk&ab_channel=Everythingistroll"
+        href="https://www.rocketseat.com.br/assinatura?utm_source=youtube&utm_medium=organic&utm_campaign=lead&utm_term=explorer&utm_content=explorer-descricao-Live_encerramento_jornada1"
         target="_blank"
         class="memory"
       >
